# python-lrcurve

./: LICENSE.txt  README.md  debug.html  package.json  setup.cfg  setup.py
lrcurve/: __init__.py  keras_learning_curve.py  keras_learning_curve_test.py  plot_learning_curve.py  plot_learning_curve_test.py
lrcurve/web_assets/: d3.bundle.js  d3.js  learning_curve.css  learning_curve.js
notebooks/: emulated_training.ipynb  keras_example.ipynb  pytorch_example.ipynb
