# Inside of setup.cfg
[metadata]
name = lrcurve
version = 2.2.1
url = https://github.com/AndreasMadsen/lrcurve
author = Andreas Madsen
author_email = amwebdk@gmail.com
description = Real-time learning curve for Jupiter notebooks
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
keywords = learning, curve, pytorch, keras, tensorflow, jupyter, colab, interactive, live, real-time
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ipython

[options.package_data]
* = *.js, *.css

[options.extras_require]
test=
    nose
    jupyterlab
    tensorflow
    torch
    scikit-learn
